objects/ProgramCategoryAutoqualification__c.object
<CustomObject>
    <description>Program categories that represent an automatic qualification by another program. For example, a CAEZ category that denotes automatic qualification if the employee qualifies for (or is certified) WOTC.</description>
    <fields>
        <fullName>ProgramCategoryAutoqualificationEID__c</fullName>
        <description>The Enterprise ID for this Program Category Autoqualification record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Program Category Autoqualification record.</inlineHelpText>
        <label>Program Category Autoqualification EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramCategory__c</fullName>
        <description>Program categories that represent an automatic qualification by another program. For example, a CAEZ category that denotes automatic qualification if the employee qualifies for (or is certified) WOTC.</description>
        <inlineHelpText>Program categories that represent an automatic qualification by another program. For example, a CAEZ category that denotes automatic qualification if the employee qualifies for (or is certified) WOTC.</inlineHelpText>
        <label>Program Category</label>
        <referenceTo>ProgramCategory__c</referenceTo>
        <relationshipLabel>Program Category Autoqualifications</relationshipLabel>
        <relationshipName>ProgramCategoryAutoqualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program that automatically qualifies another program&apos;s category. For example, WOTC, if a CAEZ category that denotes automatic qualification if the employee qualifies for (or is certified) WOTC.</description>
        <inlineHelpText>Program that automatically qualifies another program&apos;s category. For example, WOTC, if a CAEZ category that denotes automatic qualification if the employee qualifies for (or is certified) WOTC.</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Category Autoqualifications</relationshipLabel>
        <relationshipName>ProgramCategoryAutoqualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Category Autoqualification</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Program Category Autoqualification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Category Autoqualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>